--- a/brewery.html
+++ b/brewery.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Bryggeriet
-permalink: /brewery/
+permalink: /brewery
 ---
 
 <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
