--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">BRYGGERIET</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Gagnef Brewing är ett nanobryggeri i hjärtat av dalarna. Vi vill brygga hantverksöl med experimentslusta, skicklighet och varje ölstil ska vara en ny upplevelse. </p>
+          <p>Gagnef Brewing är ett nanobryggeri i hjärtat av Dalarna. Vi vill brygga hantverksöl med experimentslusta, skicklighet och varje ölstil ska vara en ny upplevelse. </p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/brewery">Läs mer</a>
           </div>
