--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -5,7 +5,7 @@ name: "VANLIG"
 alcohol: 4.9%
 classification: Starköl
 sale_date: 4
-type: "Tysk ale"
+type: "Tysk Ale"
 size: 33cl
 container: Burk
 image: /assets/images/beers/vanlig
