--- a/brewery.html
+++ b/brewery.html
@@ -59,7 +59,7 @@ permalink: /brewery
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
-        <p>Vår första öl att nå butikshyllorna i Gagnef var folkölen Vintärti Mild Ale. Bryggd tillsammans med våra vänner på Wetterstadens Bryggeri.</p>
+        <p>Vår första öl att nå butikshyllorna i Gagnef var folkölen Vintärti Mild Ale. Bryggd tillsammans med våra vänner på <a href="//wetterstadensbryggeri.se" target="_blank" class="underline underline-offset-8 hover:text-white">Wetterstadens Bryggeri</a>.</p>
       </div>
     </div>
   </div>
@@ -86,7 +86,8 @@ permalink: /brewery
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
-        <p>På nationaldagen 2022 bryggde vi vår allra första öl. <a href="/beers/vanlig" class="font-bold hover:underline underline-offset-8">VANLIG</a>.</p>
+        <p>På nationaldagen 2022 bryggde vi vår allra första öl - VANLIG.</p>
+        <a href="/beers/vanlig" class="underline underline-offset-8 hover:text-white">Läs mer</a>
       </div>
     </div>
   </div>
