--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">VANLIG</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Idén till Vanlig kläcktes när prästsonen Mike klagade på att vi inte bryggde något "ljust och blaskigt" i vårt hembryggeri. Resultatet blev en ljus ale inspirerad av ölen som bryggs i Köln.</p>
+          <p>Vår allra första öl som är planerad att lanseras under sommaren 2022.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers/vanlig">Läs mer</a>
           </div>
@@ -63,9 +63,9 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">VÅRA ÖL</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Vi har fler på gång</p>
+          <p>VANLIG, FOLKLIG, SOLSHEA och HUMLIG är fler öl som är på gång.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck fler</a>
+            <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck</a>
           </div>
         </div>
       </div>
