--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">VANLIG</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Vår allra första öl som är planerad att lanseras under sommaren 2022.</p>
+          <p>Vår allra första starköl som är planerad att lanseras under sensommaren 2022.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers/vanlig">Läs mer</a>
           </div>
@@ -58,20 +58,42 @@ layout: home
     </div>
   </div>
 
-  <div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="flex flex-col items-start sm:flex-row bg-gagnef-yellow-500">
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+        <div class="text-4xl sm:text-6xl font-bold text-black">FOLKLIG</div>
+        <div class="text-lg sm:text-xl text-black">
+          <p>En folköl vi tillägnar folket i Gagnef. Planerad att lanseras under sensommaren 2022.</p>
+          <div class="mt-2">
+            <a class="underline underline-offset-8 hover:text-white" href="/beers/folklig">Läs mer</a>
+          </div>
+        </div>
+        </div>
+    </div>
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_folklig.jpeg)] bg-cover">
+      <a href="/beers/folklig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+        <picture>
+          <source srcset="/assets/images/beers/folklig.webp" type="image/webp">
+          <img class="h-[500px]" src="/assets/images/beers/folklig.png">
+        </picture>
+      </a>
+    </div>
+  </div>
+
+  <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.jpeg)]">
+      <a href="/beers" class="flex h-[500px] w-full"></a>
+    </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">VÅRA ÖL</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>VANLIG, FOLKLIG, SOLSHEA och HUMLIG är fler öl som är på gång.</p>
+          <p>SOLSHEA och HUMLIG är fler öl som är på gång.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck</a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.jpeg)]">
-      <a href="/beers" class="flex h-[500px] w-full"></a>
     </div>
   </div>
 </div>
