Adding prel. release dates

--- a/_beers/folklig.html
+++ b/_beers/folklig.html
@@ -13,5 +13,5 @@ description: "En lätt humlad ale vi tillägnar folket i Gagnef! I denna använd
 permalink: /beers/folklig
 og_image: /assets/images/og/og_folklig.jpeg
 coming_soon: true
-coming_soon_info: Lanseras under sensommaren 2022
+coming_soon_info: "Preliminär säljstart 26 september"
 ---
