--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -13,4 +13,5 @@ description: "Solshea, som tidigare bryggdes tillsammans med Wetterstadens Brygg
 permalink: /beers/solshea
 og_image: /assets/images/og/og_solshea.jpeg
 coming_soon: true
+coming_soon_info: "Preliminär säljstart 26 september"
 ---
