--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@ layout: home
   </div>
 
   <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-pink-500">
-    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/flowers.png)] bg-cover">
-      <a href="/beers/vanlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.jpg)] bg-cover">
+      <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
-          <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
-          <img class="h-[500px]" src="/assets/images/beers/vanlig.png">
+          <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
+          <img class="h-[500px]" src="/assets/images/beers/solshea.png">
         </picture>
       </a>
     </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
-        <div class="text-4xl sm:text-6xl font-bold text-black">VANLIG</div>
+        <div class="text-4xl sm:text-6xl font-bold text-black">SOLSHEA</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Vår allra första starköl som är planerad att lanseras under sensommaren 2022.</p>
+          <p>Vår allra första starköl som har preliminär säljstart 26 september.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/beers/vanlig">Läs mer</a>
+            <a class="underline underline-offset-8 hover:text-white" href="/beers/solshea">Läs mer</a>
           </div>
         </div>
         </div>
@@ -88,7 +88,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">VÅRA ÖL</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>SOLSHEA och HUMLIG är fler öl som är på gång.</p>
+          <p>VANLIG och HUMLIG är fler öl som är på gång.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck</a>
           </div>
