--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: home
       <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
           <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
-          <img class="h-[500px]" src="/assets/images/beers/solshea.png">
+          <img class="h-[500px] pointer-events-none" src="/assets/images/beers/solshea.png">
         </picture>
       </a>
     </div>
@@ -63,7 +63,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">FOLKLIG</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>En folköl vi tillägnar folket i Gagnef. Planerad att lanseras under sensommaren 2022.</p>
+          <p>En folköl vi tillägnar folket i Gagnef. Preliminär säljstart 26 september.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers/folklig">Läs mer</a>
           </div>
@@ -74,7 +74,7 @@ layout: home
       <a href="/beers/folklig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
           <source srcset="/assets/images/beers/folklig.webp" type="image/webp">
-          <img class="h-[500px]" src="/assets/images/beers/folklig.png">
+          <img class="h-[500px] pointer-events-none" src="/assets/images/beers/folklig.png">
         </picture>
       </a>
     </div>
