Smaller bg faster web

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/humlekottar.jpeg')]">
+<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/humlekottar_bg.webp')]">
   <div class="relative flex flex-col min-h-screen bg-gradient-to-r from-gagnef-moss-500/50 to-gagnef-moss-500/50 backdrop-blur-sm">
     {%
       include menu.html
