Smaller img faster site

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ layout: home
         </div>
       </div>
     </div>
-    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.jpeg)]">
+    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.webp)]">
       <a href="/brewery" class="flex h-[500px] w-full"></a>
     </div>
   </div>
 
   <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-pink-500">
-    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.jpg)] bg-cover">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.webp)] bg-cover">
       <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
           <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
-          <img class="h-[500px] pointer-events-none" src="/assets/images/beers/solshea.png">
+          <img class="h-[500px]" src="/assets/images/beers/solshea.png">
         </picture>
       </a>
     </div>
@@ -70,18 +70,18 @@ layout: home
         </div>
         </div>
     </div>
-    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_folklig.jpeg)] bg-cover">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_folklig.webp)] bg-cover">
       <a href="/beers/folklig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
           <source srcset="/assets/images/beers/folklig.webp" type="image/webp">
-          <img class="h-[500px] pointer-events-none" src="/assets/images/beers/folklig.png">
+          <img class="h-[500px]" src="/assets/images/beers/folklig.png">
         </picture>
       </a>
     </div>
   </div>
 
   <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
-    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.jpeg)]">
+    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.webp)]">
       <a href="/beers" class="flex h-[500px] w-full"></a>
     </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
