Tweaks from web.dev

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ layout: home
         <div class="text-lg sm:text-xl text-black">
           <p>Gagnef Brewing är ett nanobryggeri i hjärtat av Dalarna. Vi vill brygga hantverksöl med experimentslusta, skicklighet och varje ölstil ska vara en ny upplevelse. </p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/brewery">Läs mer</a>
+            <a class="underline underline-offset-8 hover:text-white" href="/brewery">Läs mer om bryggeriet</a>
           </div>
         </div>
       </div>
     </div>
     <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.webp)]">
-      <a href="/brewery" class="flex h-[500px] w-full"></a>
+      <div class="flex h-[500px] w-full"></div>
     </div>
   </div>
 
@@ -51,7 +51,7 @@ layout: home
         <div class="text-lg sm:text-xl text-black">
           <p>Vår allra första starköl som har preliminär säljstart 26 september.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/beers/solshea">Läs mer</a>
+            <a class="underline underline-offset-8 hover:text-white" href="/beers/solshea">Läs mer om SOLSHEA</a>
           </div>
         </div>
         </div>
@@ -65,7 +65,7 @@ layout: home
         <div class="text-lg sm:text-xl text-black">
           <p>En folköl vi tillägnar folket i Gagnef. Preliminär säljstart 26 september.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/beers/folklig">Läs mer</a>
+            <a class="underline underline-offset-8 hover:text-white" href="/beers/folklig">Läs mer om FOLKLIG</a>
           </div>
         </div>
         </div>
@@ -82,7 +82,7 @@ layout: home
 
   <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
     <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.webp)]">
-      <a href="/beers" class="flex h-[500px] w-full"></a>
+      <div class="flex h-[500px] w-full"></div>
     </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
