--- a/brewery.html
+++ b/brewery.html
@@ -5,7 +5,7 @@ permalink: /brewery
 ---
 
 <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
-  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/gb_fat.jpeg)]">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/gb_fat.webp)]">
     <div class="h-[500px]"></div>
   </div>
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
@@ -47,13 +47,13 @@ permalink: /brewery
       </div>
     </div>
   </div>
-  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/flottbron.jpg)]">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/flottbron.webp)]">
     <div class="h-[500px]"></div>
   </div>
 </div>
 
 <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
-  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/vintarti.jpeg)]">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/vintarti.webp)]">
     <div class="h-[500px]"></div>
   </div>
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
@@ -73,13 +73,13 @@ permalink: /brewery
       </div>
     </div>
   </div>
-  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.jpeg)]">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/isak_brygger.webp)]">
     <div class="h-[500px]"></div>
   </div>
 </div>
 
 <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
-  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/brewery_first_batch.jpeg)]">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/brewery_first_batch.webp)]">
     <div class="h-[500px] flex items-center">
     </div>
   </div>
