More tweaks to web.dev

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: home
       <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
           <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
-          <img class="h-[500px]" alt="link to solshea" src="/assets/images/beers/solshea.png">
+          <img class="h-[500px] w-[190px]" alt="link to solshea" src="/assets/images/beers/solshea.png">
         </picture>
       </a>
     </div>
@@ -74,7 +74,7 @@ layout: home
       <a href="/beers/folklig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
           <source srcset="/assets/images/beers/folklig.webp" type="image/webp">
-          <img class="h-[500px]" alt="link to folklig" src="/assets/images/beers/folklig.png">
+          <img class="h-[500px] w-[190px]" alt="link to folklig" src="/assets/images/beers/folklig.png">
         </picture>
       </a>
     </div>
