--- a/brewery.html
+++ b/brewery.html
@@ -87,7 +87,7 @@ permalink: /brewery
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
         <p>På nationaldagen 2022 bryggde vi vår allra första öl - VANLIG.</p>
-        <a href="/beers/vanlig" class="underline underline-offset-8 hover:text-white">Läs mer</a>
+        <a href="/beers/vanlig" class="underline underline-offset-8 hover:text-white">Läs mer om VANLIG</a>
       </div>
     </div>
   </div>
