--- a/brewery.html
+++ b/brewery.html
@@ -17,7 +17,7 @@ permalink: /brewery
       <div class="flex justify-center mt-4">
         <picture>
           <source srcset="/assets/images/profiles/isak.webp" type="image/webp">
-          <img class="h-[150px] grayscale brightness-125 rounded-full" src="/assets/images/profiles/isak.png">
+          <img alt="porträtt isak" class="h-[150px] grayscale brightness-125 rounded-full" src="/assets/images/profiles/isak.png">
         </picture>
       </div>
     </div>
@@ -34,15 +34,15 @@ permalink: /brewery
       <div class="flex justify-center mt-4">
         <picture>
           <source srcset="/assets/images/profiles/lasse.webp" type="image/webp">
-          <img class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/lasse.png">
+          <img alt="porträtt lasse" class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/lasse.png">
         </picture>
         <picture>
           <source srcset="/assets/images/profiles/jorgen.webp" type="image/webp">
-          <img class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/jorgen.png">
+          <img alt="porträtt jörgen" class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/jorgen.png">
         </picture>
         <picture>
           <source srcset="/assets/images/profiles/anders.webp" type="image/webp">
-          <img class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/anders.png">
+          <img alt="porträtt anders" class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/anders.png">
         </picture>
       </div>
     </div>
