Add scroll on scroll igon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: home
       </h1>
     </div>
     <div class="flex justify-center pb-20 sm:pb-10">
-      <lottie-player src="/assets/lotties/scroll.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
+      <lottie-player id="scroll-icon" src="/assets/lotties/scroll.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
     </div>
   </div>
 
