--- a/brewery.html
+++ b/brewery.html
@@ -4,7 +4,7 @@ title: Bryggeriet
 permalink: /brewery
 ---
 
-<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row">
   <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/gb_fat.webp)]">
     <div class="h-[500px]"></div>
   </div>
@@ -24,7 +24,7 @@ permalink: /brewery
   </div>
 </div>
 
-<div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+<div class="min-h-[250px] flex flex-col items-start sm:flex-row">
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
@@ -42,7 +42,7 @@ permalink: /brewery
         </picture>
         <picture>
           <source srcset="/assets/images/profiles/anders.webp" type="image/webp">
-          <img alt="porträtt anders" class="grayscale brightness-125 rounded-full" src="/assets/images/profiles/anders.png">
+          <img alt="porträtt anders" class="scale-x-[-1] grayscale brightness-125 rounded-full" src="/assets/images/profiles/anders.png">
         </picture>
       </div>
     </div>
@@ -52,20 +52,20 @@ permalink: /brewery
   </div>
 </div>
 
-<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row">
   <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/vintarti.webp)]">
     <div class="h-[500px]"></div>
   </div>
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
-        <p>Vår första öl att nå butikshyllorna i Gagnef var folkölen Vintärti Mild Ale. Bryggd tillsammans med våra vänner på <a href="//wetterstadensbryggeri.se" target="_blank" class="underline underline-offset-8 hover:text-white">Wetterstadens Bryggeri</a>.</p>
+        <p>Vår första öl att nå butikshyllorna i Gagnef var folkölen Vintärti Mild Ale. Bryggd tillsammans med våra vänner på <a href="//wetterstadensbryggeri.se" target="_blank" class="underline underline-offset-8 hover:text-gray-900">Wetterstadens Bryggeri</a>.</p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+<div class="min-h-[250px] flex flex-col items-start sm:flex-row">
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
@@ -78,7 +78,7 @@ permalink: /brewery
   </div>
 </div>
 
-<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row">
   <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/brewery_first_batch.webp)]">
     <div class="h-[500px] flex items-center">
     </div>
@@ -87,7 +87,7 @@ permalink: /brewery
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
         <p>På nationaldagen 2022 bryggde vi vår allra första öl - VANLIG.</p>
-        <a href="/beers/vanlig" class="underline underline-offset-8 hover:text-white">Läs mer om VANLIG</a>
+        <a href="/beers/vanlig" class="mt-1 underline underline-offset-8 hover:text-gray-800">Läs mer om VANLIG</a>
       </div>
     </div>
   </div>
