--- a/index.html
+++ b/index.html
@@ -36,34 +36,34 @@ layout: home
     </div>
   </div>
 
-  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-pink-500">
-    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.webp)] bg-cover">
-      <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-yellow-500">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_humlig.webp)] bg-cover">
+      <a href="/beers/humlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
-          <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
-          <img class="h-[500px] w-[190px]" alt="link to solshea" src="/assets/images/beers/solshea.png">
+          <source srcset="/assets/images/beers/humlig.webp" type="image/webp">
+          <img class="h-[500px] w-[190px]" alt="link to humlig" src="/assets/images/beers/humlig.png">
         </picture>
       </a>
     </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
-        <div class="text-4xl sm:text-6xl font-bold text-black">SOLSHEA</div>
+        <div class="text-4xl sm:text-6xl font-bold text-black">HUMLIG</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Vår allra första starköl som har preliminär säljstart 17 oktober.</p>
+          <p>Vår allra första starköl som har preliminär säljstart 24 oktober.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/beers/solshea">Läs mer om SOLSHEA</a>
+            <a class="underline underline-offset-8 hover:text-white" href="/beers/humlig">Läs mer om HUMLIG</a>
           </div>
         </div>
         </div>
     </div>
   </div>
 
-  <div class="flex flex-col items-start sm:flex-row bg-gagnef-yellow-500">
+  <div class="flex flex-col items-start sm:flex-row bg-gagnef-pink-500">
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">FOLKLIG</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>En folköl vi tillägnar folket i Gagnef. Preliminär säljstart 3 oktober.</p>
+          <p>En folköl vi tillägnar folket i Gagnef. Säljstart 22 oktober.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers/folklig">Läs mer om FOLKLIG</a>
           </div>
