--- a/_beers/folklig.html
+++ b/_beers/folklig.html
@@ -13,5 +13,5 @@ description: "En lätt humlad ale vi tillägnar folket i Gagnef! I denna använd
 permalink: /beers/folklig
 og_image: /assets/images/og/og_folklig.jpeg
 coming_soon: true
-coming_soon_info: "Säljstart 22 oktober"
+coming_soon_info: "Säljstart 22 oktober på bryggeriet kl 10 - 12."
 ---
