--- a/_beers/folklig.html
+++ b/_beers/folklig.html
@@ -4,7 +4,7 @@ title: "FOLKLIG"
 name: "FOLKLIG"
 alcohol: 3.5%
 classification: Folköl
-sale_date: 3
+sale_date: 2022-10-22
 type: "Amerikansk Pale Ale"
 size: 33cl
 container: Burk
@@ -12,6 +12,5 @@ image: /assets/images/beers/folklig
 description: "En lätt humlad ale vi tillägnar folket i Gagnef! I denna använder vi den amerikanska humlen Amarillo som är en av våra favoriter."
 permalink: /beers/folklig
 og_image: /assets/images/og/og_folklig.jpeg
-coming_soon: true
-coming_soon_info: "Säljstart 22 oktober på bryggeriet kl 10 - 12."
+coming_soon: false
 ---
