--- a/_beers/humlig.html
+++ b/_beers/humlig.html
@@ -4,7 +4,7 @@ title: "HUMLIG"
 name: "HUMLIG"
 alcohol: 6.5%
 classification: Starköl
-sale_date: 2
+sale_date: 2022-10-31
 type: "India Pale Ale"
 size: 33cl
 container: Burk
@@ -12,6 +12,8 @@ image: /assets/images/beers/humlig
 description: "Vår tolkning av en klasisk amerikansk IPA där vi använder vår absoluta favorithumle, klassikern Amarillo."
 permalink: /beers/humlig
 og_image: /assets/images/og/og_humlig.jpeg
-coming_soon: true
+coming_soon: false
 coming_soon_info: "Preliminär säljstart 31 oktober"
+release_info: "Säljstart 31 oktober"
+SB_number: 5805015
 ---
