--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -4,7 +4,7 @@ title: "SOLSHEA"
 name: "SOLSHEA"
 alcohol: 6.5%
 classification: Starköl
-sale_date: 4
+sale_date: 1
 type: "Saison"
 size: 33cl
 container: Burk
@@ -14,4 +14,5 @@ permalink: /beers/solshea
 og_image: /assets/images/og/og_solshea.jpeg
 coming_soon: true
 coming_soon_info: "Preliminär säljstart 31 oktober"
+SB_number: 5792215
 ---
