--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -4,7 +4,7 @@ title: "VANLIG"
 name: "VANLIG"
 alcohol: 4.9%
 classification: Starköl
-sale_date: 1
+sale_date: 0
 type: "Tysk Ale"
 size: 33cl
 container: Burk
@@ -14,4 +14,5 @@ permalink: /beers/vanlig
 og_image: /assets/images/og/og_vanlig.jpeg
 coming_soon: true
 coming_soon_info: "Preliminär säljstart 28 november"
+SB_number: 5805215
 ---
