--- a/_beers/folklig.html
+++ b/_beers/folklig.html
@@ -4,7 +4,7 @@ title: "FOLKLIG"
 name: "FOLKLIG"
 alcohol: 3.5%
 classification: Folköl
-sale_date: 2022-10-22
+sale_date: 20221022
 type: "Amerikansk Pale Ale"
 size: 33cl
 container: Burk
