--- a/_beers/humlig.html
+++ b/_beers/humlig.html
@@ -4,7 +4,7 @@ title: "HUMLIG"
 name: "HUMLIG"
 alcohol: 6.5%
 classification: Starköl
-sale_date: 2022-10-31
+sale_date: 20221031
 type: "India Pale Ale"
 size: 33cl
 container: Burk
