Add links for the type

--- a/_beers/folklig.html
+++ b/_beers/folklig.html
@@ -6,6 +6,7 @@ alcohol: 3.5%
 classification: Folköl
 sale_date: 20221022
 type: "Amerikansk Pale Ale"
+about_type_link: "https://www.systembolaget.se/ol/olstilar/ale/brittisk-amerikansk/apa/"
 size: 33cl
 container: Burk
 image: /assets/images/beers/folklig
