--- a/_beers/humlig.html
+++ b/_beers/humlig.html
@@ -6,6 +6,7 @@ alcohol: 6.5%
 classification: Starköl
 sale_date: 20221031
 type: "India Pale Ale"
+about_type_link: "https://www.systembolaget.se/ol/olstilar/ale/brittisk-amerikansk/ipa/"
 size: 33cl
 container: Burk
 image: /assets/images/beers/humlig
