--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -6,6 +6,7 @@ alcohol: 6.5%
 classification: Starköl
 sale_date: 2
 type: "Saison"
+about_type_link: "https://www.systembolaget.se/ol/olstilar/ale/belgisk-stil/saison/"
 size: 33cl
 container: Burk
 image: /assets/images/beers/solshea
