--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">HUMLIG</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Vår allra första starköl som har säljstart 31 oktober.</p>
+          <p>Vår allra första starköl som finns för beställning hos Systembolaget.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers/humlig">Läs mer om HUMLIG</a>
           </div>
