--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -14,6 +14,6 @@ description: "Solshea, som tidigare bryggdes tillsammans med Wetterstadens Brygg
 permalink: /beers/solshea
 og_image: /assets/images/og/og_solshea.jpeg
 coming_soon: true
-coming_soon_info: "Preliminär säljstart 31 oktober"
+coming_soon_info: "Preliminär säljstart 14 november"
 SB_number: 5792215
 ---
