Update new dates for new beers

--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -4,7 +4,7 @@ title: "SOLSHEA"
 name: "SOLSHEA"
 alcohol: 6.5%
 classification: Starköl
-sale_date: 2
+sale_date: 20221123
 type: "Saison"
 about_type_link: "https://www.systembolaget.se/ol/olstilar/ale/belgisk-stil/saison/"
 size: 33cl
@@ -14,6 +14,7 @@ description: "Solshea, som tidigare bryggdes tillsammans med Wetterstadens Brygg
 permalink: /beers/solshea
 og_image: /assets/images/og/og_solshea.jpeg
 coming_soon: true
-coming_soon_info: "Preliminär säljstart 14 november"
+coming_soon_info: "Preliminär säljstart 23 november"
+release_info: "Säljstart 23 november"
 SB_number: 5792215
 ---
