--- a/_beers/humlig.html
+++ b/_beers/humlig.html
@@ -14,7 +14,6 @@ description: "Vår tolkning av en klasisk amerikansk IPA där vi använder vår 
 permalink: /beers/humlig
 og_image: /assets/images/og/og_humlig.jpeg
 coming_soon: false
-coming_soon_info: "Preliminär säljstart 31 oktober"
-release_info: "Säljstart 31 oktober"
+release_info: "Preliminärt ölsläpp 6 februari"
 SB_number: 5805015
 ---
