--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -13,8 +13,7 @@ image: /assets/images/beers/solshea
 description: "Solshea, som tidigare bryggdes tillsammans med Wetterstadens Bryggeri, var vår första öl som lanserades på festival i Gagnef. Solshea är nu en grundsten i vårt bryggeri."
 permalink: /beers/solshea
 og_image: /assets/images/og/og_solshea.jpeg
-coming_soon: true
-coming_soon_info: "Preliminär säljstart 23 november"
+coming_soon: false
 release_info: "Säljstart 23 november"
 SB_number: 5792215
 ---
