--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">VÅRA ÖL</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>VANLIG och SOLSHEA är fler öl som är på gång.</p>
+          <p>Fler öl är på gång.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck</a>
           </div>
