--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@ layout: home
     </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
-        <div class="text-4xl sm:text-6xl font-bold text-black">VÅRA ÖL</div>
+        <div class="text-4xl sm:text-6xl font-bold text-black">VÅR ÖL</div>
         <div class="text-lg sm:text-xl text-black">
-          <p>Fler öl är på gång.</p>
+          <p>Vi har fler öl på gång.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck</a>
           </div>
