--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-white">SOLSHEA</div>
         <div class="text-lg sm:text-xl text-white">
-          <p>Vår första saison som har säljstart 23 november.</p>
+          <p>Vår första saison.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-gray-400" href="/beers/solshea">Läs mer om SOLSHEA</a>
           </div>
