--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -4,7 +4,7 @@ title: "VANLIG"
 name: "VANLIG"
 alcohol: 4.9%
 classification: Starköl
-sale_date: 1
+sale_date: 20230116
 type: "Tysk Ale"
 about_type_link: "https://www.systembolaget.se/ol/olstilar/ale/tysk-stil/kolsch/"
 size: 33cl
