--- a/_beers/vanlig.html
+++ b/_beers/vanlig.html
@@ -13,7 +13,6 @@ image: /assets/images/beers/vanlig
 description: "Idén till Vanlig kläcktes när prästsonen Mike klagade på att vi inte bryggde något \"ljust och blaskigt\" i vårt hembryggeri. Resultatet blev en ljus ale inspirerad av ölen som bryggs i Köln."
 permalink: /beers/vanlig
 og_image: /assets/images/og/og_vanlig.jpeg
-coming_soon: true
-coming_soon_info: "Preliminär säljstart 16 januari"
+coming_soon_info: "Säljstart 16 januari"
 SB_number: 5805215
 ---
