--- a/_beers/humlig.html
+++ b/_beers/humlig.html
@@ -10,7 +10,7 @@ about_type_link: "https://www.systembolaget.se/ol/olstilar/ale/brittisk-amerikan
 size: 33cl
 container: Burk
 image: /assets/images/beers/humlig
-description: "Vår tolkning av en klasisk amerikansk IPA där vi använder vår absoluta favorithumle, klassikern Amarillo."
+description: "Vår tolkning av en klassisk amerikansk IPA där vi använder vår absoluta favorithumle, klassikern Amarillo."
 permalink: /beers/humlig
 og_image: /assets/images/og/og_humlig.jpeg
 coming_soon: false
