--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@ layout: home
   </div>
 
   <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-moss-500">
-    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.webp)] bg-cover">
-      <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_vanlig.webp)] bg-cover">
+      <a href="/beers/vanlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
-          <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
-          <img class="h-[500px] w-[190px]" alt="link to solshea" src="/assets/images/beers/solshea.png">
+          <source srcset="/assets/images/beers/vanlig.webp" type="image/webp">
+          <img class="h-[500px] w-[190px]" alt="link to vanlig" src="/assets/images/beers/vanlig.png">
         </picture>
       </a>
     </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
-        <div class="text-4xl sm:text-6xl font-bold text-white">SOLSHEA</div>
+        <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
         <div class="text-lg sm:text-xl text-white">
-          <p>Vår första saison.</p>
+          <p>Årets första öl.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-gray-400" href="/beers/solshea">Läs mer om SOLSHEA</a>
+            <a class="underline underline-offset-8 hover:text-gray-400" href="/beers/vanlig">Läs mer om VANLIG</a>
           </div>
         </div>
         </div>
