--- a/_beers/solshea.html
+++ b/_beers/solshea.html
@@ -14,6 +14,6 @@ description: "Solshea, som tidigare bryggdes tillsammans med Wetterstadens Brygg
 permalink: /beers/solshea
 og_image: /assets/images/og/og_solshea.jpeg
 coming_soon: false
-release_info: "Preliminärt ölsläpp 17 april"
+release_info: "Llsläpp 17 april"
 SB_number: 5792215
 ---
