--- a/_beers/folklig.html
+++ b/_beers/folklig.html
@@ -14,5 +14,5 @@ description: "En lätt humlad ale vi tillägnar folket i Gagnef! I denna använd
 permalink: /beers/folklig
 og_image: /assets/images/og/og_folklig.jpeg
 coming_soon: false
-release_info: "Preliminärt ölsläpp 2 maj"
+release_info: "Preliminärt ölsläpp 19 juni"
 ---
