--- a/_beers/humlig.html
+++ b/_beers/humlig.html
@@ -14,6 +14,6 @@ description: "Vår tolkning av en klassisk amerikansk IPA där vi använder vår
 permalink: /beers/humlig
 og_image: /assets/images/og/og_humlig.jpeg
 coming_soon: false
-release_info: "Ölsläpp 8 maj"
+release_info: "Preliminärt ölsläpp 3 juli"
 SB_number: 5805015
 ---
