--- a/brewery.html
+++ b/brewery.html
@@ -69,7 +69,7 @@ permalink: /brewery
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
-        <p>Våren 2022 tog vi över lokalen från en matbutik där vi numera brygger vår öl.</p>
+        <p>Våren 2022 flyttade vi in i en gammal matbutik där vi började brygga vår egna öl.</p>
       </div>
     </div>
   </div>
@@ -86,8 +86,65 @@ permalink: /brewery
   <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
     <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
       <div class="text-lg sm:text-xl text-black">
-        <p>På nationaldagen 2022 bryggde vi vår allra första öl - VANLIG.</p>
-        <a href="/beers/vanlig" class="mt-1 underline underline-offset-8 hover:text-gray-800">Läs mer om VANLIG</a>
+        <p>På nationaldagen 2022 körde vi igång bryggverket med vi vår allra första öl.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="min-h-[250px] flex flex-col items-start sm:flex-row">
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>Hösten 2022 såldes våra första burkar. Burkarna var fyllda med FOLKLIG.</p>
+        <a href="/beers/folklig" class="mt-1 underline underline-offset-8 hover:text-gray-800">Läs mer om FOLKLIG</a>
+      </div>
+    </div>
+  </div>
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/folklig_etikett.webp)]">
+    <div class="h-[500px] flex items-center">
+    </div>
+  </div>
+</div>
+
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/humlig_in_fridge.webp)]">
+    <div class="h-[500px] flex items-center">
+    </div>
+  </div>
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>Strax därefter släppte vi vår första öl via beställningssortimentet på Systembolaget.</p>
+        <a href="/beers/humlig" class="mt-1 underline underline-offset-8 hover:text-gray-800">Läs mer om HUMLIG</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="min-h-[250px] flex flex-col items-start sm:flex-row">
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>I Maj 2023 tog Systembolaget i Djurås in SOLSHEA och VANLIG på hyllan för lokalt & småskaligt.</p>
+      </div>
+    </div>
+  </div>
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/smaskaligt.webp)]">
+    <div class="h-[500px] flex items-center">
+    </div>
+  </div>
+</div>
+
+<div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row">
+  <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-center bg-[url(/assets/images/beer_tank.webp)]">
+    <div class="h-[500px] flex items-center">
+    </div>
+  </div>
+  <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+    <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+      <div class="text-lg sm:text-xl text-black">
+        <p>För att hinna brygga öl i den takt den såldes flyttade vi senare under hösten 2023 in hos <a href="https://www.5man.se" target="_blank" class="mt-1 underline underline-offset-8 hover:text-gray-800">5mans Bryggeri.</a></p>
       </div>
     </div>
   </div>
