--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: home
     %}
 
     <div class="flex grow flex-col justify-center mt-[-160px]">
-      <h1 class="font-title text-5xl sm:text-8xl uppercase font-bold text-gagnef-yellow-500 text-center drop-shadow-[0_2px_2px_rgba(0,0,0,1)]">
-        Vi brygger i gagnef
+      <h1 class=" text-5xl sm:text-8xl uppercase font-bold text-gagnef-yellow-500 text-center drop-shadow-[0_2px_2px_rgba(0,0,0,1)]">
+        Hantverksöl från Gagnef
       </h1>
     </div>
-    <div class="flex justify-center pb-20 sm:pb-10">
+    <div class="flex justify-center pb-20 sm:pb-12">
       <lottie-player id="scroll-icon" src="/assets/lotties/scroll.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
     </div>
   </div>
@@ -37,6 +37,39 @@ layout: home
   </div>
 
   <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-moss-500">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.webp)] bg-cover">
+      <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+        <picture>
+          <source srcset="/assets/images/beers/solshea.webp" type="image/webp">
+          <img class="h-[500px] w-[190px]" alt="link to solshea" src="/assets/images/beers/solshea.png">
+        </picture>
+      </a>
+    </div>
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+        <div class="text-4xl sm:text-6xl font-bold text-white">SOLSHEA</div>
+        <div class="text-lg sm:text-xl text-white">
+          <p>"Världens godaste öl." - Oskar N.</p>
+          <div class="mt-2">
+            <a class="underline underline-offset-8 hover:text-black" href="/beers/solshea">Läs mer om SOLSHEA</a>
+          </div>
+        </div>
+        </div>
+    </div>
+  </div>
+
+  <div class="flex flex-col items-start sm:flex-row bg-gagnef-green-300">
+    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
+      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
+        <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
+        <div class="text-lg sm:text-xl text-white">
+          <p>En ljus och blaskig öl till prästsonen.</p>
+          <div class="mt-2">
+            <a class="underline underline-offset-8 hover:text-black" href="/beers/vanlig">Läs mer om VANLIG</a>
+          </div>
+        </div>
+        </div>
+    </div>
     <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_vanlig.webp)] bg-cover">
       <a href="/beers/vanlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
@@ -45,13 +78,24 @@ layout: home
         </picture>
       </a>
     </div>
+  </div>
+
+  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-yellow-500">
+    <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_humlig.webp)] bg-cover">
+      <a href="/beers/humlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
+        <picture>
+          <source srcset="/assets/images/beers/humlig.webp" type="image/webp">
+          <img class="h-[500px] w-[190px]" alt="link to humlig" src="/assets/images/beers/humlig.png">
+        </picture>
+      </a>
+    </div>
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
-        <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
+        <div class="text-4xl sm:text-6xl font-bold text-white">HUMLIG</div>
         <div class="text-lg sm:text-xl text-white">
-          <p>Årets första öl.</p>
+          <p>"Världens godaste öl." - Oskar N.</p>
           <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-gray-400" href="/beers/vanlig">Läs mer om VANLIG</a>
+            <a class="underline underline-offset-8 hover:text-black" href="/beers/humlig">Läs mer om HUMLIG</a>
           </div>
         </div>
         </div>
@@ -77,23 +121,6 @@ layout: home
           <img class="h-[500px] w-[190px]" alt="link to folklig" src="/assets/images/beers/folklig.png">
         </picture>
       </a>
-    </div>
-  </div>
-
-  <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
-    <div class="flex p-4 w-full sm:w-1/2 justify-center bg-cover bg-[url(/assets/images/burkar.webp)]">
-      <div class="flex h-[500px] w-full"></div>
-    </div>
-    <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
-      <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
-        <div class="text-4xl sm:text-6xl font-bold text-black">VÅR ÖL</div>
-        <div class="text-lg sm:text-xl text-black">
-          <p>Vi har fler öl på gång.</p>
-          <div class="mt-2">
-            <a class="underline underline-offset-8 hover:text-white" href="/beers">Upptäck</a>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
