--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<div class="bg-fixed w-full bg-center bg-cover min-h-screen flex flex-col bg-[url('/assets/images/humlekottar_bg.webp')]">
+<div class="bg-fixed w-full bg-center sm:bg-cover min-h-screen flex flex-col bg-[url('/assets/images/humlekottar_bg.webp')]">
   <div class="relative flex flex-col min-h-screen bg-gradient-to-r from-gagnef-moss-500/50 to-gagnef-moss-500/50 backdrop-blur-sm">
     {%
       include menu.html
@@ -10,11 +10,11 @@ layout: home
     %}
 
     <div class="flex grow flex-col justify-center mt-[-160px]">
-      <h1 class=" text-5xl sm:text-8xl uppercase font-bold text-gagnef-yellow-500 text-center drop-shadow-[0_2px_2px_rgba(0,0,0,1)]">
+      <h1 class="p-1 text-5xl sm:text-8xl uppercase font-bold text-gagnef-yellow-500 text-center drop-shadow-[0_2px_2px_rgba(0,0,0,1)]">
         Hantverksöl från Gagnef
       </h1>
     </div>
-    <div class="flex justify-center pb-20 sm:pb-12">
+    <div class="flex justify-center pb-24 sm:pb-10">
       <lottie-player id="scroll-icon" src="/assets/lotties/scroll.json" background="transparent"  speed="1"  style="width: 24px; height: 39px;" loop autoplay></lottie-player>
     </div>
   </div>
@@ -93,7 +93,7 @@ layout: home
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-white">HUMLIG</div>
         <div class="text-lg sm:text-xl text-white">
-          <p>"Världens godaste öl." - Oskar N.</p>
+          <p>En lite humligare öl.</p>
           <div class="mt-2">
             <a class="underline underline-offset-8 hover:text-black" href="/beers/humlig">Läs mer om HUMLIG</a>
           </div>
