--- a/cookies-privacy.html
+++ b/cookies-privacy.html
@@ -8,6 +8,6 @@ skip_age: true
 <div class="flex flex-col p-8">
   <h1 class="text-2xl uppercase">Kakor</h1>
 
-  <p>Vi använder kakor för att undvika att visa rutan för ålderskontroll varje gång du besöker vår hemsida.</p>
-  <p>Vi sparar enbart kakor efter det att du tillåter oss att spara kakor.</p>
+  <p>Vi använder kakor för att analysera hur hemsidan används för att kunna ge en bättre upplevelse.</p>
+  <p>Vi sparar ingen personlig information om dig. </p>
 </div>
